--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     <button id="decrease" class="dec">Decrease</button>
     <button id="reset" class="res">Reset</button>
     <button id="increase" class="inc">increase</button> -->
+    <button id="roll_btn" class="roll">roll</button> <br>
+    <label id="random1" class="text"></label>
+    <label id="random2" class="text"></label>
+    <label id="random3" class="text"></label>
 </div>
 </body>
 </html>
