learnt more javascript stuffs

--- a/index.html
+++ b/index.html
@@ -21,11 +21,26 @@
     <label id="update">0</label><br>
     <button id="decrease" class="dec">Decrease</button>
     <button id="reset" class="res">Reset</button>
-    <button id="increase" class="inc">increase</button> -->
+    <button id="increase" class="inc">increase</button>
+
+    Html FOR RANDOM NUMBER GENERATOR STARTS HERE
     <button id="roll_btn" class="roll">roll</button> <br>
     <label id="random1" class="text"></label>
     <label id="random2" class="text"></label>
     <label id="random3" class="text"></label>
+
+    LEARNING IF STATEMENTS WITH INPUTS
+    <label>Enter your age</label>
+    <input type="text" id="mytext"> <br>
+    <button id="btn"> submit</button> <br>
+    <p id="message"></p>
+
+     LEARNING TO USE CHECKBOXES WITH JAVASCRIPT
+    <input type="checkbox" name="" id="checka">
+    <label for="checka">SUPREME CHECK</label> <br>
+    <button id="submit">SUBMIT</button> <br>
+    <p id="smallText"></p> -->
+    
 </div>
 </body>
 </html>
